# thesocialnetwork

./: start.sh
.github/workflows/: deploy.yml
backend/: pyproject.toml
backend/src/thesocialnetwork/: __init__.py
frontend/: .gitignore  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.tsx
frontend/src/features/: app.tsx
frontend/src/services/: api.gen.ts
frontend/src/styles/: index.css
