[project]
name = "thesocialnetwork"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "aspizu", email = "aspizu@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gunicorn>=23.0.0",
    "redis[hiredis]>=6.4.0",
    "reproca",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
reproca = { git = "https://github.com/aspizu/reproca", branch = "development" }

